# routes/invoice_reservasi.go
@@ -17,6 +17,7 @@ func NewInvoiceReservasiRoutes(ctrlInvoiceReservasi *controller.InvoiceReservasi
 // SetupRoutes will setup the routes for InvoiceReservasi
 func (p *InvoiceReservasi) SetupRoutes(router *gin.RouterGroup) {
 	router.POST("/invoice-reservasi", middleware.JWTMiddleware([]string{"admin", "user"}), p.ctrlInvoiceReservasi.Create)
+	router.GET("/admin/invoice-reservasi", middleware.JWTMiddleware([]string{"admin"}), p.ctrlInvoiceReservasi.AdminFindAll)
 	router.GET("/invoice-reservasi", middleware.JWTMiddleware([]string{"admin", "user"}), p.ctrlInvoiceReservasi.FindAll)
 	router.GET("/invoice-reservasi/:id", middleware.JWTMiddleware([]string{"admin", "user"}), p.ctrlInvoiceReservasi.FindByID)
 	router.PUT("/invoice-reservasi/:id", middleware.JWTMiddleware([]string{"admin", "user"}), p.ctrlInvoiceReservasi.Update)
